--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "recharts": "^3.5.1",
     "lucide-react": "^0.556.0",
     "react-dom": "^19.2.1",
-    "react": "^19.2.1"
+    "react": "^19.2.1",
+    "dexie": "3.2.4",
+    "@supabase/supabase-js": "2.39.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
