--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,12 @@
   "categories": ["lifestyle", "family", "medical"],
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3063/3063822.png",
+      "src": "/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3063/3063822.png",
+      "src": "/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
