--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google/genai": "*",
     "@supabase/supabase-js": "^2.39.3",
     "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.7",
     "lucide-react": "^0.358.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
