--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "little kids",
+  "name": "little_kids",
   "compatibility_date": "2025-12-21",
   "assets": {
     "directory": "./dist"
