--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,7 @@
 {
-  "name": "little-kids-v2",
+  "name": "little-kids",
   "compatibility_date": "2025-12-21",
   "assets": {
     "directory": "./dist"
   }
 }
-
