refactor: Update Capacitor SQLite dependency
Replaces the core `@capacitor/sqlite` package with the community version `@capacitor-community/sqlite` and updates corresponding imports in `package.json`, `index.html`, and `lib/db.ts`. This change is necessary due to the deprecation or migration of the official plugin.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.0",
-    "@capacitor/sqlite": "^6.0.0-1",
+    "@capacitor-community/sqlite": "^6.0.0-1",
     "@google/genai": "^0.12.0",
     "@supabase/supabase-js": "^2.39.3",
     "lucide-react": "^0.344.0",
