--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/filesystem": "^6.0.0",
-    "@capacitor-community/sqlite": "^6.0.0-1",
     "@google/genai": "^0.12.0",
     "@supabase/supabase-js": "^2.39.3",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.7",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
