--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/camera": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@google/genai": "^0.12.0",
     "@supabase/supabase-js": "^2.39.3",
     "dexie": "^3.2.4",
