--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/keep-awake": "^6.0.0",
     "@google/genai": "^0.12.0",
     "@supabase/supabase-js": "^2.39.3",
     "dexie": "^3.2.4",
