feat: Add CloudPhotoModal component
Introduces a new modal for handling cloud-based photos. This includes lazy loading the component and adding state management for photo URLs and names in the App component. Additionally, minor updates to settings UI and database indexing are included.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,9 +1,8 @@
 {
-  "name": "kids-app",
+  "name": "little-kids-v2",
   "compatibility_date": "2025-12-21",
   "assets": {
     "directory": "./dist"
   }
 }
-
 
