feat: Integrate AWS S3 client for storage
Adds the AWS SDK v3 S3 client to the project dependencies. This enables future integration for storing user-generated content, such as images and memories, in AWS S3.

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "little-moments",
   "private": true,
@@ -9,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.525.0",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.0",
