--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "little-moments",
   "private": true,
@@ -26,6 +25,7 @@
   "devDependencies": {
     "tailwindcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
